--- a/aboutDio.html
+++ b/aboutDio.html
@@ -9,28 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>HW04 - MKTYP6a</title>
-  </head>
-  <body class="container">
-    <h1>HW04</h1>
-    <h2>Team Members</h2>
-    <ul>
-    <li> Diosmeiris Pena
-        <a href="aboutDio.html">(about)</a>
-        <a href="calcDio.html">(calculator)</a>
-    </li>
-    <li> Tharien
-        <a href="aboutTharien.html">(about)</a>
-        <a href="calcTharien.html">(calculator)</a>
-    </li>
-    <li> Veronica Rojas
-        <a href="aboutrojas.html">(about)</a>
-        <a href="calcrojas.html">(calculator)</a>
-    </li>
-    <li> Deja Freeman
-        <a href="aboutDeja.html">(about)</a>
-        <a href="calcDeja.html">(calculator)</a>
-    </li>
-    </ul>
+    <body class="container">
+      <h1> About Dio</h1>
 
  <!-- Optional JavaScript -->
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
