--- a/aboutDio.html
+++ b/aboutDio.html
@@ -11,7 +11,20 @@
     <title>HW04 - MKTYP6a</title>
     <body class="container">
       <h1> About Dio</h1>
-      
+      <div class="col">
+        <img width="100%" src="penadio.jpg">
+      </div>
+
+    </div>
+       <h2>About Myself</h2>
+       <ul>
+           <li> I am a middle child </li>
+           <li> I am Afro-Latina </li>
+           <li> I am a first genertaion student </li>
+      </ul>
+
+      <a href="https://www.facebook.com/diosmeiris.pena">Facebook</a>
+      <a href="https://twitter.com/diosmeiris_312"> Twitter</a>
 
  <!-- Optional JavaScript -->
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
