--- a/aboutDio.html
+++ b/aboutDio.html
@@ -12,11 +12,11 @@
     <body class="container">
       <h1> About Dio</h1>
       <div class="col">
-        <img width="100%" src="penadio.jpg">
+        <img src="penadio.jpg">
       </div>
 
     </div>
-       <h2>About Myself</h2>
+
        <ul>
            <li> I am a middle child </li>
            <li> I am Afro-Latina </li>
