changes (inches to feet)

--- a/calcdio.html
+++ b/calcdio.html
@@ -15,8 +15,8 @@
   <body class="container">
       <h1>Bedroom Area</h1>
       What is your full name? <input type="text" id="fullName"><br>
-      Enter length of bedroom in inches <input type="number" id="roomLength"><br>
-      Enter width of bedroom in inches <input type="number" id="width"><br>
+      Enter length of bedroom in feet <input type="number" id="roomLength"><br>
+      Enter width of bedroom in feet <input type="number" id="width"><br>
       <button class="btn btn-lg btn-danger" onClick="calcArea()">
           Calculate Area of Bedroom
       </button>
