--- a/aboutDio.html
+++ b/aboutDio.html
@@ -13,7 +13,7 @@
       <h1> About Dio</h1>
 <br>
       <div class="col">
-        <img src="penadio.jpg">
+        <img width="300" src="penadio.jpg">
       </div>
 
 <br>
@@ -23,11 +23,29 @@
            <li> I am a first genertaion student </li>
       </ul>
 <br>
-    <button> <a href="https://www.facebook.com/diosmeiris.pena">Facebook</a> <button>
+    <a class="btn btn-info btn-lg" href="https://www.facebook.com/diosmeiris.pena">Facebook</a>
+
 <br>
-    <button> <a href="https://twitter.com/diosmeiris_312"> Twitter</a> <button>
+    <a class="btn btn-warning btn-lg" href="https://twitter.com/diosmeiris_312"> Twitter</a>
 
+<br>
+<br>
+  <h2> Learn Spanish: <h2>
 
+<table class="table table-bordered table-striped">
+
+  <thead>
+    <tr> <th> English</th>   <th> Spanish</th> </tr>
+  </thead>
+
+  <tbody>
+      <tr> <td> one </td>   <td> uno</td> </tr>
+      <tr> <td> two </td>   <td> dos</td> </tr>
+      <tr> <td> three </td>   <td> tres </td> </tr>
+      <tr> <td> four </td>   <td> quatro</td> </tr>
+  </tbody>
+
+</table>
 
 
 
