--- a/aboutTharien.html
+++ b/aboutTharien.html
@@ -12,7 +12,55 @@
   </head>
   <body class="container">
     <h1>About Tharien</h1>
-      I will exceed your expectations!!!
+    <!doctype html>
+  <html lang="en">
+    <head>
+      <!-- Required meta tags -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <script src="webpage0.js"></script>
+
+
+       <div clss="col">
+           <a href="https://www.brandeis.edu/"> I currently attend brandeis University</a>
+          <ul>
+            <li> I was born in Gorgia  </li>
+            <li> I've been to 47 states (except idaho,wyoming and alaska) </li>
+         </ul>
+      </div>
+     </div>
+
+
+       <table class="table table-bordered table-striped">
+        <thead>
+          <tr> <th> English </th>   <th> Spanish</th> <th> Portugese</th>
+          </tr>
+       </thead>
+
+        <tbody>
+            <tr> <td> one </td>   <td> uno</td>       <td> um </td></tr>
+            <tr> <td> two </td>   <td> dos</td>        <td> dois </tr>
+            <tr> <td> three </td>  <td> tres </td>     <td> três</td></tr>
+            <tr> <td> four </td>   <td> quatro</td>      <td> quatro</td></tr>
+        </tbody>
+
+      </table>
+
+
+
+
+
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
+  </html>
+
 
 
  <!-- Optional JavaScript -->
