--- a/CalcVeronica.html
+++ b/CalcVeronica.html
@@ -1,23 +1,32 @@
 <!doctype html>
 <html lang="en">
   <head>
- <!-- Required meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
- <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>HW04 - MKTYP6a</title>
-    <body class="container">
-      <h1> About Veronica Rojas </h1>
-      Don't mess with me!!!
+    <script src="CalcVeronica.js"></script>
 
+    <title> Calculator by Veronica </title>
+  </head>
+  <body class="container">
+      <h1> Volume of a Cone </h1>
+      What is your full name? <input type="text" id="fullName"><br>
+      Enter radius of cone in inches <input type="number" id="radius"><br>
+      Enter height of cone in inches <input type="number" id="height"><br>
+      <button class="btn btn-lg btn-danger" onClick="calcVol()">
+          Calculate Volume
+      </button>
+      <br>
+      <hr>
+      <h2> Results </h2>
+      <label id="Volume">???? </label>
 
-
-
- <!-- Optional JavaScript -->
- <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
