--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </li>
     <li> Veronica Rojas
         <a href="aboutrojas.html">(about)</a>
-        <a href="calcrojas.html">(calculator)</a>
+        <a href="CalcVeronica.html">(calculator)</a>
     </li>
     <li> Deja Freeman
         <a href="aboutDeja.html">(about)</a>
