--- a/aboutDeja.html
+++ b/aboutDeja.html
@@ -13,6 +13,30 @@
   <body class="container">
     <h1>About Deja</h1>
 
+      <div class=”col”>
+        <p>
+    	Hello, welcome to my page! My name is Deja Freeman and I currently attend Brandeis University as a first year. I’m planning on majoring in Politics and International and Global Studies. Although I live in a small city in MA, I was originally born an raised in Atlanta, Georgia for the majority of my life. I'm a true old school soul kinda gal, i'm into older R&B music, and I get the sense that i’ve done life twice. Weird right?!
+      </p>
+      </div>
+    </div>
+<table class= “table table-bordered table-stripped “>
+
+<thread>
+<tr> <th> Favorite things to do </th>  <th> Biggest accomplishment </th> <th> Things I value the most </th> </tr>
+</thread>
+
+<tbody>
+  <tr> <td> I like to read a lot, mainly fiction or inspirational . But I can never read an assigned book. </td> <td> I got to work alongside Massachusetts legislators, on political campaigns regarding funding for the city of chelsea and the Boston Area. </td> <td> I value Love, rather it be companionship, friendship or family. I'm a very loving and I wouldn’t want to change that. </td> </tr>
+<tr> <td> Hanging with my younger siblings is always fun, so I try my best to chill with them daily, but now I just call and facetime. </td> <td> I volunteered for two years at my local Salvation Army, and go to work with their youth program. </td> <td> I value my faith, I am currently trying to strengthen my relationship with God. So I value my faith and what it brings me. </td></tr>
+<tr> <td> I love playing soccer, it’s my favorite sport. I grew up playing it with my family, so it holds a huge part of my heart. </td> <td> I was appointed to work in the Chelsea Youth Commision, which is partners with out City Council Board. </td> <td> Lastly I value respect, I think nowindays respect is losing its value. If we lose respect then we are never going to live as one. </td></tr>
+
+</tbody>
+</table
+
+
+
+
+
 
  <!-- Optional JavaScript -->
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
