background color change

--- a/aboutDio.html
+++ b/aboutDio.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>HW04 - MKTYP6a</title>
-    <body class="container">
+    <body style="background-color:powderblue;"> <class="container">
+
       <h1> About Dio</h1>
 <br>
-      <div class="col">
-        <img width="300" src="penadio.jpg">
-      </div>
+      <div class="col">                                               <br>             <div class="col">
+        <img width="400" src="penadio.jpg">                                              <img width="500" src="drflag.jpg"
+      </div>                                                                           </div>
 
 <br>
        <ul>
