--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <li> Deja Freeman
         <a href="aboutDeja.html">(about)</a>
         <a href="calcDeja.html">(calculator)</a>
+        <a href="calcDeja2.html">(calculator two)</a>
     </li>
     </ul>
 
