Edit about me page
My edits for the about me page and image adds

--- a/aboutDeja.html
+++ b/aboutDeja.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>HW04 - MKTYP6a</title>
+    <body style="background-color:#F08080;"> <class="container">
   </head>
   <body class="container">
-    <h1>About Deja</h1>
+    <h1>Sneak peak of Deja!!</h1>
+    <img width="200"
+           src="deja.img.jpeg">
+    <img width="200"
+           src="Deja.img2.jpg">
 
       <div class=”col”>
         <p>
