--- a/aboutRojas.html
+++ b/aboutRojas.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="webpage0.js"></script>
     <title>MKTYP Demo page</title>
+    <body style="background-color:darksalmon;"> <class="container">
   </head>
   <body class="container">
         <h1> A Quick Intro to Veronica </h1>
@@ -16,14 +17,7 @@
     <div class="row">
 
       <div class="col">
-        <img src="Comp Science/veronicashand.png" width="100%">
-      </div>
-
-
-      <div class="col">
-        Quick description about me: I am currently a freshman at Brandeis University, I am 19 years old, and I am thinking about double majoring in Economics and perhaps Business or Computer Science. I like thrifting and finding good pieces that speak to me. I've been spending most of my time studying and hanging out with my friends recently.
-        I live with my father and two younger sisters in Woodhaven, New York.
-        <img src="...">
+        <img src="SteveLacy.JPEG" width="400">
 
         <ul>
           <li> Father: Domingo Rojas </li>
@@ -31,8 +25,13 @@
           <li> Sisters: Judith and Daniela Rojas </li>
         </ul>
 
+      </div>
 
-   </div>
+      <div class="col">
+        Quick description about me: I am currently a freshman at Brandeis University, I am 19 years old, and I am thinking about double majoring in Economics and perhaps Business or Computer Science. I like thrifting and finding good pieces. I also like to eat ramen; The picture of the ramen below is a Spicy Miso ramen from the restaurant named Hokkaido Ramen Santouka which is located in Boston. I've been spending most of my time studying and hanging out with my friends recently.
+        I live with my father and two younger sisters in Woodhaven, New York.
+        <img src="ramen.JPEG" width="400">
+      </div>
  </div>
 
 
@@ -49,29 +48,7 @@
        <tr> <td> four </td>   <td> quatro</td> <td> sa </td> </tr>
    </tbody>
 
- </table>
 
-    <div class="row">
-        <div class="col-sm bg-primary">
-          A
-        </div>
-        <div class="col-sm bg-danger">
-          B
-        </div>
-        <div class="col-sm bg-warning">
-          C
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm bg-secondary">
-          A
-        </div>
-        <div class="col-sm bg-primary">
-          B
-        </div>
-
-    </div>
 
 
 
