--- a/aboutDeja.html
+++ b/aboutDeja.html
@@ -24,17 +24,17 @@
       </p>
       </div>
     </div>
-<table class= “table table-bordered table-stripped “>
+
+    <table class="table table-bordered table-striped">
 
 <thread>
 <tr> <th> Favorite things to do </th>  <th> Biggest accomplishment </th> <th> Things I value the most </th> </tr>
 </thread>
 
 <tbody>
-  <tr> <td> I like to read a lot, mainly fiction or inspirational . But I can never read an assigned book. </td> <br> <td> I got to work alongside Massachusetts legislators, on political campaigns regarding funding for the city of chelsea and the Boston Area. </td> <td> I value Love, rather it be companionship, friendship or family. I'm a very loving and I wouldn’t want to change that. </td> </tr>
-<tr> <td> Hanging with my younger siblings is always fun, so I try my best to chill with them daily, but now I just call and facetime. </td> <br> <td> I volunteered for two years at my local Salvation Army, and go to work with their youth program. </td> <td> I value my faith, I am currently trying to strengthen my relationship with God. So I value my faith and what it brings me. </td></tr>
-<tr> <td> I love playing soccer, it’s my favorite sport. I grew up playing it with my family, so it holds a huge part of my heart. </td> <br> <td> I was appointed to work in the Chelsea Youth Commision, which is partners with out City Council Board. </td> <td> Lastly I value respect, I think nowindays respect is losing its value. If we lose respect then we are never going to live as one. </td></tr>
-
+  <tr> <td> I like to read a lot, mainly fiction or inspirational . But I can never read an assigned book. </td><td> I got to work alongside Massachusetts legislators, on political campaigns regarding funding for the city of chelsea and the Boston Area. </td><td> I value Love, rather it be companionship, friendship or family. I'm a very loving and I wouldn’t want to change that. </td> </tr>
+<tr> <td> Hanging with my younger siblings is always fun, so I try my best to chill with them daily, but now I just call and facetime. </td><td> I volunteered for two years at my local Salvation Army, and go to work with their youth program. </td><td> I value my faith, I am currently trying to strengthen my relationship with God. So I value my faith and what it brings me. </td></tr>
+<tr> <td> I love playing soccer, it’s my favorite sport. I grew up playing it with my family, so it holds a huge part of my heart. </td><td> I was appointed to work in the Chelsea Youth Commision, which is partners with out City Council Board. </td><td> Lastly I value respect, I think nowindays respect is losing its value. If we lose respect then we are never going to live as one. </td></tr>
 </tbody>
 </table
 
