--- a/aboutRojas.html
+++ b/aboutRojas.html
@@ -24,8 +24,9 @@
           <li> Mother: Yanet Rojas </li>
           <li> Sisters: Judith and Daniela Rojas </li>
         </ul>
-
+        <a class="btn btn-info btn-lg" href="https://www.instagram.com/ysl.veronica/"> Instagram</a>
       </div>
+
 
       <div class="col">
         Quick description about me: I am currently a freshman at Brandeis University, I am 19 years old, and I am thinking about double majoring in Economics and perhaps Business or Computer Science. I like thrifting and finding good pieces. I also like to eat ramen; The picture of the ramen below is a Spicy Miso ramen from the restaurant named Hokkaido Ramen Santouka which is located in Boston. I've been spending most of my time studying and hanging out with my friends recently.
@@ -35,7 +36,7 @@
  </div>
 
 
- <table class="table table-bordered table-striped">
+ <table class="table table-bordered table-striped" style="margin-top:5px">
 
    <thead>
      <tr> <th> English</th>   <th> Spanish</th>  <th> Korean</th> </tr>
