--- a/aboutDeja.html
+++ b/aboutDeja.html
@@ -9,23 +9,50 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>HW04 - MKTYP6a</title>
-    <body style="background-color:#F08080;"> <class="container">
+
   </head>
-  <body class="container">
-    <h1>Sneak peak of Deja!!</h1>
-    <img width="200"
-           src="deja.img.jpeg">
-    <img width="200"
-           src="Deja.img2.jpg">
+  <body style="background-color:#AFDCEF;">
+   <div class="container" >
 
-      <div class=”col”>
-        <p>
-    	Hello, welcome to my page! My name is Deja Freeman and I currently attend Brandeis University as a first year. I’m planning on majoring in Politics and International and Global Studies. Although I live in a small city in MA, I was originally born an raised in Atlanta, Georgia for the majority of my life. I'm a true old school soul kinda gal, i'm into older R&B music, and I get the sense that i’ve done life twice. Weird right?!
-      </p>
+
+
+     <div class="row">
+        <div class="col-md">
+          ...A
+        </div>
+        <div class="col-md">
+          ...B
+        </div>
       </div>
-    </div>
 
-    <table class="table table-bordered table-striped">
+    <div class="jumbotron">
+    <h1>Sneak peak of Deja!!</h1>
+  </div>
+
+
+
+     <div class="row">
+        <div class="col-md">
+          <img width="200"
+                 src="deja.img.jpeg">
+          <img width="200"
+                 src="Deja.img2.jpg">
+        </div>
+        <div class="col-md">
+          <p>
+      	Hello! welcome to my page! My name is Deja Freeman and I currently attend Brandeis University as a first year.
+        I’m planning on majoring in Politics and International and Global Studies. Although I live in a small city in MA,
+         I was originally born an raised in Atlanta, Georgia for the majority of my life.
+         I'm a true old school soul kinda gal, i'm into older R&B music, and I get the sense that i’ve done life twice.
+         Weird right?!
+        </p>
+        </div>
+      </div>
+
+
+
+    <table class="table table-bordered table-striped"
+           style="margin-top:30px; border-top:3px dashed #ffccaa;">
 
 <thread>
 <tr> <th> Favorite things to do </th>  <th> Biggest accomplishment </th> <th> Things I value the most </th> </tr>
@@ -48,5 +75,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </div>
   </body>
 </html>
