--- a/aboutDio.html
+++ b/aboutDio.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>HW04 - MKTYP6a</title>
-    <body style="background-color:powderblue;"> <class="container">
+    <body style="background-color:powderblue"> <class="container">
 
       <h1> About Dio</h1>
 <br>
@@ -18,6 +18,7 @@
       </div>                                                                           </div>
 
 <br>
+
        <ul>
            <li> I am a middle child </li>
            <li> I am Afro-Latina </li>
