--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li> Diosmeiris Pena
         <a href="aboutDio.html">(about)</a>
         <a href="calcDio.html">(calculator)</a>
-        <a href="calcdio2.html">(calculator)</a>
+        <a href="calcdio2.html">(calculator #2)</a>
     </li>
     <li> Tharien
         <a href="aboutTharien.html">(about)</a>
