--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="aboutDio.html">(about)</a>
         <a href="calcDio.html">(calculator)</a>
         <a href="calcdio2.html">(calculator #2)</a>
+        <a href="drawDio.html">(graphics)</a>
     </li>
     <li> Tharien
         <a href="aboutTharien.html">(about)</a>
