--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="aboutrojas.html">(about)</a>
         <a href="CalcVeronica.html">(calculator)</a>
         <a href="CalcVeronica2.html">(calculator)</a>
+        <a href="drawVeronica.html">(calculator)</a>
     </li>
     <li> Deja Freeman
         <a href="aboutDeja.html">(about)</a>
