worked on hw04 for VR

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <li> Veronica Rojas
         <a href="aboutrojas.html">(about)</a>
         <a href="CalcVeronica.html">(calculator)</a>
-        <a href="CalcVeronica2.html">(calculator)</a>
-        <a href="drawVeronica.html">(calculator)</a>
+        <a href="CalcVeronica2.html">(calculator #2)</a>
+        <a href="drawVeronica.html">(graphics)</a>
     </li>
     <li> Deja Freeman
         <a href="aboutDeja.html">(about)</a>
