--- a/drawVeronica.html
+++ b/drawVeronica.html
@@ -33,6 +33,7 @@
     ctx.lineTo(100,450)
     ctx.stroke();
     ctx.fill();
+    ctx.lineWidth=1
   }
 
   function drawVeronicaAgain(){
@@ -52,6 +53,7 @@
     ctx.lineTo(108, 0);
     ctx.stroke();
     ctx.fill();
+    ctx.lineWidth=1
   }
 
   function drawCircles(){
