--- a/mouseDemoDio.html
+++ b/mouseDemoDio.html
@@ -60,7 +60,7 @@
   </script>
  </head>
  <body onload="init();">
-   <h1>MouseDemo interactive javascript canvas for 11/20</h1>
+   <h1>MouseDemoDio interactive javascript canvas for 11/20</h1>
    <br>
 
    <button onclick="drawBackground()">Clear</button>
