--- a/mouseDemoDio.html
+++ b/mouseDemoDio.html
@@ -30,7 +30,7 @@
     const x = event.offsetX
     const y = event.offsetY
     if (event.buttons==1){  // see if the mouse button is pressed
-      ctx.fillRect(x,y,10,30)
+      ctx.fillCircle(x,y,10,30)
     }
   }
 
