--- a/drawDio.html
+++ b/drawDio.html
@@ -108,6 +108,7 @@ ctx.stroke()
      n <input type="text" id="nTF" value="10"><br>
      <button onclick="drawCircles()">draw circles</button>
    </div>
+   <button onClick="drawDio()">Dio Button</button>
 
    <script src="drawgrid.js"></script>
  </body>
