--- a/drawDio.html
+++ b/drawDio.html
@@ -46,6 +46,8 @@
   }
   function drawDio(){
 ctx.beginPath()
+ctx.strokeStyle="red"
+ctx.lineWidth=5
 ctx.moveTo(160,160)
 ctx.lineTo(200,200)
 ctx.lineTo(200,140)
@@ -60,7 +62,21 @@ ctx.lineTo(200,200)
 ctx.lineTo(200,160)
 ctx.stroke()
   }
-
+  function drawDio(){
+      ctx.strokeStyle="red"
+      ctx.lineWidth=5
+      ctx.beginPath()
+      ctx.moveTo()
+      ctx.lineTo()
+      ctx.lineTo()
+      ctx.lineTo()
+      ctx.lineTo()
+      ctx.lineTo()
+      ctx.lineTo()
+      ctx.lineTo()
+      ctx.lineTo()
+      ctx.stroke()
+    }
 
 
 
