--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="calcDio.html">(calculator)</a>
         <a href="calcdio2.html">(calculator #2)</a>
         <a href="drawDio.html">(graphics)</a>
+        <a href="mouseDemoDio.html">(drawing)</a>
     </li>
     <li> Tharien
         <a href="aboutTharien.html">(about)</a>
