--- a/mouseVeronica.html
+++ b/mouseVeronica.html
@@ -26,11 +26,14 @@
 
   function mouseMove(event){
     //console.log(event.buttons)
-    ctx.fillStyle="rgba(0,0,255,0.3)"
+    ctx.fillStyle="rgba(8,10,75,0.1)"
     const x = event.offsetX
     const y = event.offsetY
     if (event.buttons==1){  // see if the mouse button is pressed
       ctx.fillRect(x,y,10,30)
+      ctx.fillRect(x-15,y,30,3)
+      ctx.strokeStyle="rgba(250,0,0,0.1)"
+      drawCircle(x,y,50)
     }
   }
 
