--- a/CalcVeronica2.html
+++ b/CalcVeronica2.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-  <title> demo1 </title>
+  <title> Calculate Volume of a Cylinder </title>
 </head>
 <body>
 <h1>Simple Demo</h1>
 Your Radius: <input type="text" id="radiusTF"><br>
 Your Height: <input type="text" id="heightTF"><br>
 <button onClick="calcVol()">
-  Calculate Volume of Cone
+  Calculate Volume of Cylinder
 </button>
 <br>
 <label id="resultLabel">
@@ -18,8 +18,8 @@ Your Height: <input type="text" id="heightTF"><br>
 function calcVol(){
   r = radiusTF.value  // read radius from element with id="radius"
   h = heightTF.value  // read height from element with id="height"
-  volume = 1/3.0*h*(r*r)*Math.PI  // calculate the Volume of a Cone
-  resultLabel.innerHTML =    // write into label element with id "Volume of a Cone"
+  volume = (r*r)*h*Math.PI  // calculate the Volume of a Cylinder
+  resultLabel.innerHTML =    // write into label element with id "Volume of a Cylinder"
       "Your Volume is "
       +volume.toFixed(1)  // round Volume to 1 decimal place
 }
