--- a/CalcVeronica2.html
+++ b/CalcVeronica2.html
@@ -3,11 +3,11 @@
   <title> Calculate Volume of a Cylinder </title>
 </head>
 <body>
-<h1>Simple Demo</h1>
+<h1> Calculate Volume of a Cylinder</h1>
 Your Radius: <input type="text" id="radiusTF"><br>
 Your Height: <input type="text" id="heightTF"><br>
 <button onClick="calcVol()">
-  Calculate Volume of Cylinder
+  Volume of Cylinder
 </button>
 <br>
 <label id="resultLabel">
