--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <a href="calcDeja.html">(calculator)</a>
         <a href="calcDeja2.html">(calculator two)</a>
         <a href="Dejadraw.html"> (Graphics)</a>
+        <a href="mouseDeja.html"> (Mouse)</a>
+
     </li>
     </ul>
 
