--- a/FinalProjectVeronica.html
+++ b/FinalProjectVeronica.html
@@ -99,10 +99,10 @@ canvas.addEventListener('mousemove',mouseMove,false)
  <body onload="init();">
    <div class="container">
      <div class="jumbotron">
-       <h1>Tim's Final Project .... </h1>
+       <h1>Veronica's Final Project .... </h1>
        <p>This is a minimal demo </p>
      </div>
-     
+
    <div class="row">
      <div class="col">
        <h1>Calculations</h1>
