final project and grid

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="calcdio2.html">(calculator #2)</a>
         <a href="drawDio.html">(graphics)</a>
         <a href="mouseDemoDio.html">(drawing)</a>
+        <a href="FinalProjectDio.html"> (final project)</a>
     </li>
     <li> Tharien
         <a href="aboutTharien.html">(about)</a>
