--- a/finalprojectDeja.html
+++ b/finalprojectDeja.html
@@ -123,6 +123,8 @@ canvas.addEventListener('mousemove',mouseMove,false)
      </div>
      <div class="col">
        <h1>Canvas</h1>
+       <canvas style="float:left;margin-right:30px" id="canvas" width="500" height="500"></canvas>
+
 
 
 
